# factoryops-ai-copilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  mcp_server.py
backend/app/agent/: orchestrator.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/data/: factory_data.py
backend/app/datasets/: service.py
backend/app/db/: repository.py
backend/app/llm/: providers.py
backend/app/models/: schemas.py
backend/app/tools/: factory_tools.py  registry.py
backend/tests/: test_api.py  test_openrouter_tool_use.py  test_security.py  test_tools.py
docs/: architecture.md  demo-script.md
examples/: sample-prompts.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/demo/: staticRuns.ts
frontend/src/types/: run.ts
